--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "lint": "eslint . --ext .ts",
-    "start": "node dist/server.js",
+    "start": "nodemon dist/server.js",
+    "start:dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "build": "tsc"
   },
   "keywords": [],
@@ -22,6 +23,7 @@
     "http-status": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "nodemon": "^3.1.10",
     "zod": "^3.24.4"
   },
   "devDependencies": {
