--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 PORT=5000
 MONGO_URI=mongodb+srv://fsdteamsaa:fsdteamsaa@cluster0.fb8jx.mongodb.net/exodus?retryWrites=true&w=majority&appName=Cluster0
+bcrypt_salt_round = 10
+JWT_ACCESS_SECRET = sdkjfskfhkjdsfhkjdshfkds
+JWT_ACCESS_EXPIRES_IN = 1d
+JWT_REFRESH_SECRET = saldjfdsajfhjdsfkjdsfd
+JWT_REFRESH_EXPIRES_IN = 90d
+OTP_SECRET = sdaklfjdslkfjlkjdfjlkdsfj
