`Added OTP verification and password change functionality, updated user model and controllers, and modified routes and middlewares to accommodate these changes.`

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ MONGO_URI=mongodb+srv://fsdteamsaa:fsdteamsaa@cluster0.fb8jx.mongodb.net/exodus?
 bcrypt_salt_round = 10
 JWT_ACCESS_SECRET = sdkjfskfhkjdsfhkjdshfkds
 JWT_ACCESS_EXPIRES_IN = 1d
+OTP_EXPIRE = 1h
 JWT_REFRESH_SECRET = saldjfdsajfhjdsfkjdsfd
 JWT_REFRESH_EXPIRES_IN = 90d
 OTP_SECRET = sdaklfjdslkfjlkjdfjlkdsfj
