--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/http-status": "^0.2.30",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/nodemailer": "^6.4.17",
+    "@types/qrcode": "^1.5.5",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -26,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "nodemon": "^3.1.10",
+    "qrcode": "^1.5.4",
     "zod": "^3.24.4"
   },
   "devDependencies": {
