--- a/.env
+++ b/.env
@@ -7,3 +7,8 @@ OTP_EXPIRE = 1h
 JWT_REFRESH_SECRET = saldjfdsajfhjdsfkjdsfd
 JWT_REFRESH_EXPIRES_IN = 90d
 OTP_SECRET = sdaklfjdslkfjlkjdfjlkdsfj
+
+
+CLOUDINARY_CLOUD_NAME=ddtuyxcsl
+CLOUDINARY_API_KEY=155594432527689
+CLOUDINARY_API_SECRET=fw86uLN2JW_S9tYxb69R48Fym2k
