--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "qrcode": "^1.5.4",
+    "socket.io": "^4.8.1",
     "zod": "^3.24.4"
   },
   "devDependencies": {
